--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
-<script type="text/javascript">
-	window.location.replace("gmurano-" + (navigator.language || navigator.userLanguage).split('-')[0] + ".html");
+<link rel="stylesheet" type="text/css" class="ui" href="https://semantic-ui.com/dist/semantic.min.css">
+<div style="display:inline-block;margin-top:5px;margin-right:5px;float:right;">
+	<i style="cursor:pointer;" title="Argentino" class="argentina flag" onclick="loadPage('es')"></i>
+	<i style="cursor:pointer;" title="English" class="united states flag" onclick="loadPage('en')"></i>
+</div>
+<div id="page"></div>
+
+<script type="text/javascript">		
+    function loadPage(lang) {
+		if (!lang)
+			lang = (navigator.language || navigator.userLanguage).split('-')[0];
+		const url =
+			"gmurano-" + lang + ".html";
+        if (window.XMLHttpRequest)
+        {// code for IE7+, Firefox, Chrome, Opera, Safari, SeaMonkey
+            request = new XMLHttpRequest();
+        }
+		
+        request.onreadystatechange=function()
+        {
+            if (request.readyState==4 && request.status==200)
+            {
+                document.getElementById("page").innerHTML = request.responseText;
+            }
+        }
+        request.open("GET", url, false);
+        request.send();
+    }
+	
+	loadPage();
 </script>
