--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			if (!lang)
 				lang = (navigator.language || navigator.userLanguage).split('-')[0];
 			const url =
-				"/cv/gmurano-" + lang.toLowerCase() + ".html";
+				"cv/gmurano-" + lang.toLowerCase() + ".html";
 			if (window.XMLHttpRequest)
 			{// code for IE7+, Firefox, Chrome, Opera, Safari, SeaMonkey
 				request = new XMLHttpRequest();
