--- a/gmurano-es.html
+++ b/gmurano-es.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>Guillermo Murano</title>
-	<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="../img/favicon.ico" type="image/x-icon">
-	<link href="../css/all.css" rel="stylesheet" type="text/css"/>
-	<link href="../css/all.min.css" rel="stylesheet" type="text/css" />
-	<link href="../css/banners.min.css" rel="stylesheet" type="text/css" />
-	<link href="../css/cv.min.css" rel="stylesheet" type="text/css" />
-	<link href="../css/jobs.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link href="css/all.css" rel="stylesheet" type="text/css"/>
+	<link href="css/all.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/banners.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/cv.min.css" rel="stylesheet" type="text/css" />
+	<link href="css/jobs.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body class="cv-page new-topbar">
@@ -45,7 +45,7 @@
 								</div>
 							</div>
 							<div class="_textRight -col3">
-								<img src="../img/avatar.png" height="100" width="100">
+								<img src="img/avatar.png" height="100" width="100">
                             </div>
 						</div>
 						<div id="cv-personal-statement" class="section highlight _updatedMinCompletion">
