--- a/gmurano-en.html
+++ b/gmurano-en.html
@@ -112,6 +112,37 @@
 							<div class="section-header section-opener">
 								<h2 class="h4">Experience</h2>
 							</div>
+							<div class="repeater cv-section highlight first collapsible expanded" id="section-1184971">
+								<div class="toggle"></div>
+								<div class="display">
+									<div class="preview">
+										<div class="-row">
+											<div class="-col8">
+												<h3 class="h4">
+													Senior Software Engineer  
+														<br><span class="location">Softvision</span>
+												</h3>
+											</div>
+											<div class="-col4">
+												<p class="time-frame">August 2018 - Current</p>
+											</div>
+										</div>
+										<div class="tags">
+											<span class="post-tag no-tag-menu">c#</span> <span class="post-tag no-tag-menu">asp.net-mvc-4</span> 
+											<span class="post-tag no-tag-menu">net-core</span> 
+											<span class="post-tag no-tag-menu">jquery</span> 
+											<span class="post-tag no-tag-menu">javascript</span>
+											<span class="post-tag no-tag-menu">net-core-entity-framework-6</span>
+											<span class="post-tag no-tag-menu">sql-server-2016</span>
+										</div>
+									</div>
+									<div class="description markdown collapsible">
+										<p>
+											Senior software engineer for an international company, working on different projects related to US taxes. This job consisted mostly in the implementation of new requirements; common needs were modifying the business logic, creating store procedures in SQL Server 2008, implementing new screens using Razor, jQuery and Sencha EXT.js, generating reports and integrating the platform with a Fix Engine through a Rest API to exchange trades with Bloomberg. The front end is built in jQuery and Sencha Ext.JS. The data is pushed to the client's web browsers using WebSync. The backend was implemented with .NET MVC 5.0, nHibernate and SQL Server. jMeter is used to measure the performance of each release. After tuning the performance the system allows simultaneasly 15k active auctions.
+										</p>
+									</div>
+								</div>
+							</div>
 							<div class="repeater cv-section highlight first collapsible expanded" id="section-1184972">
 								<div class="toggle"></div>
 								<div class="display">
@@ -124,7 +155,7 @@
 												</h3>
 											</div>
 											<div class="-col4">
-												<p class="time-frame">April 2015 - Current</p>
+												<p class="time-frame">April 2015 - August - 2018</p>
 											</div>
 										</div>
 										<div class="tags">
@@ -143,7 +174,7 @@
 									</div>
 									<div class="description markdown collapsible">
 										<p>
-											I work for the Zenfolio Project as a Technical Leader.
+											I was the local Technical Leader for Zenfolio.
 											Zenfolio is a website where photographers sell their images and products related to that images.
 											The solution contains several projects built in both .Net Framework 3.5 and 4.0, using WebForms or TypeScript integrated with backbone.js in the frontend. The backend has its own ORM built using reflection and a SQL server 2012 database. My role also consists in being a local reference for the rest of the team in Buenos Aires and act as a Scrum Master when needed.
 										</p>
