--- a/gmurano-en.html
+++ b/gmurano-en.html
@@ -46,21 +46,20 @@
 							</div>
 							<div class="_textRight -col3">
 								<img src="img/avatar.png" height="100" width="100">
-                            </div>
+                            				</div>
 						</div>
 						<div id="cv-personal-statement" class="section highlight _updatedMinCompletion">
 							<div id="statement" class="display quoted markdown">
 								<p style="">
-									When I was 12, I was watching my brother work on a school assignment and something caught my attention, he was developing using Pascal. I started to learn how to code by myself using the libraries provided and reading some of his and his colleague's code. A few years later I started doing my own applications just for fun in C, where I managed to build some "windows" styled system just using polygons and using txt files as database for an application to record the statistics of the local Argentinian football.
+									When I was 12 software development caught my attention watching my brother working on some of his school assignment using Pascal. A few years later I started doing my own applications just for fun in C, where I managed to build some “windows” styled system just using polygons and using text files as database for an application to record the statistics of the local Argentinian football.
 								</p>
 								<p>
-									Later I studied as a System Analyst in college in order to gain knowledge of my passion and build software with the best quality. The career gave me a lot of tools to accomplish tasks but also encouraged me to be self-taught in every technology and every field I love. I finished my career with good grades(7.19/10) while working as a developer, first using javascript and perl and later with C# and .NET. building from web applications to desktop applications, and using all kind of technologies according to the solution required.</p>
+									Later I studied as a System Analyst in college in order to improve my background and build software the best way possible. The career gave me a lot of tools to accomplish tasks but also encouraged me to be self-taught in every technology and every field I love. I finished my career with good levels (7.19/10) while working as a developer.
 								<p>
-									I've learned a lot working in a field I love and I've been able to work in some other countries. I have also met a lot of people and learned from them, which has also helped me grow as an IT professional. By being a hard worker I've grown a lot since my beginnings as a software developer and now I'm leading small teams.
-									I also have some hobbies, such as playing football, which I try to do at least twice a week, and I love traveling abroad.
+									I’ve learned a lot working in a field I love and I’ve been able to meet a lot of people and learned from them, which has also helped me grow as an IT professional. Being a hard worker I’ve grown a lot since my starts as a software developer and now I’m starting to lead small teams. I also have some hobbies, such as playing football, which I try to do at least twice a week, and I also love traveling in order to know new places.
 								</p>
 								<p>
-									Now I'm looking for some challenging job in order to improve my career path, where I can feel motivated to work, learn new technologies and make a good use of my skills and knowledge.
+									Now I’m looking for some challenging job in order to improve my career path, where I can feel motivated to work, learn new technologies and make a good use of my skills and knowledge.
 								</p>
 							</div>
 						</div>
